--- a/styles.css
+++ b/styles.css
@@ -42,12 +42,12 @@ body {
 .sidebar h2 {
     font-size: 16px;
     margin-bottom: 20px;
-    font-weight: 500;
+    font-weight: 600;
 }
 
-.playlist {
+/*.playlist {
     list-style: none;
-}
+}*/
 
 .playlist li {
     display: flex;
@@ -133,7 +133,7 @@ body {
     object-fit: cover;
 }
 
-.song-display #title {
+/*.song-display #title {
     font-size: 28px;
     font-weight: bold;
 }
@@ -142,7 +142,7 @@ body {
     font-size: 16px;
     color: var(--text-secondary);
     margin-top: 8px;
-}
+}*/
 
 
 /* --- Barra de Reproducción Inferior --- */
@@ -155,7 +155,7 @@ body {
     padding: 0 20px;
 }
 
-.current-song-info {
+/*.current-song-info {
     display: flex;
     align-items: center;
 }
@@ -166,7 +166,7 @@ body {
     border-radius: 6px;
     margin-right: 15px;
     object-fit: cover;
-}
+}*/
 
 #player-bar-title {
     font-weight: 500;
